# Four_bit_adder

./: .gitignore  fourbitadder
source/FourBitAdder/: FourBitAdder.h
source/FourBitAdder/intern/: FourBitAdder.cpp  FullAdder.h  HalfAdder.h
tests/gtests/: CMakeLists.txt  GTestFourBitAdder.cpp  GTestFullAdder.cpp  GTestHalfAdder.cpp
